Cart > Product images cell collapse fix

--- a/skin/frontend/mbootstrap/default/scss/_cart.scss
+++ b/skin/frontend/mbootstrap/default/scss/_cart.scss
@@ -50,10 +50,14 @@
             }
 
                 td {}
+                    .product-image {
+                        display: block;
+                        min-width: 75px; // chrome bug td collapse fix
+                    }
+
                     .product-name {
                         line-height: $line-height-computed;
                     }
-
 
                     .qty {
                         margin: 0;
